<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clycker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_Test_Code">Enter Test Code</string>
    <string name="enter_button">Enter</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="question_number">#1</string>
    <string name="questin_number">#1</string>
    <string name="submit_button">Submit</string>
    <string name="button_A">A</string>
    <string name="button_B">B</string>
    <string name="button_C">C</string>
    <string name="button_D">D</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_start_test">StartTest</string>
    <string name="title_activity_send_test_data">SendTestData</string>

</resources>
