<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@android:color/holo_blue_light"
    android:backgroundTint="#ff83d9ff">

    <EditText
        android:id="@+id/testCodeBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_Test_Code"
        />

    <EditText
        android:id="@+id/student_name_Box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testCodeBox"
        android:hint="@string/enter_student_name"
        />
    <Button
        android:id="@id/submit_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student_name_Box"
        android:layout_alignRight="@+id/testCodeBox"
        android:layout_alignEnd="@+id/testCodeBox"
        android:text="@string/enter_button"/>

</RelativeLayout>
